--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "16.13.1",
+    "react-slider": "^1.1.4",
     "sass": "^1.32.8",
     "styled-components": "^5.2.3"
   },
@@ -29,6 +30,7 @@
     "@types/react": "^17.0.3",
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.2",
+    "@types/react-slider": "^1.1.1",
     "typescript": "^4.2.3"
   }
 }
