--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/bootstrap": "^5.0.9",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.35",
+    "@types/pg": "^7.14.11",
     "@types/react": "^17.0.3",
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.2",
