--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "bootstrap": "^4.4.1",
+    "chai": "^4.3.4",
     "mqtt": "^4.2.6",
     "next": "9.3.4",
     "node-postgres": "^0.6.2",
@@ -19,10 +20,13 @@
     "pg": "^8.5.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-cookie-consent": "^6.2.3",
     "react-dom": "16.13.1",
     "react-slider": "^1.1.4",
+    "react-xterm": "^2.0.4",
     "sass": "^1.32.8",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "xterm": "^4.11.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.0.9",
