--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "chai": "^4.3.4",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "material-ui-popup-state": "^1.8.2",
     "mqtt": "^4.2.6",
-    "next": "9.3.4",
+    "next": "^10.1.3",
+    "next-iron-session": "^4.1.12",
     "node-postgres": "^0.6.2",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
@@ -29,7 +34,9 @@
     "xterm": "^4.11.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/bootstrap": "^5.0.9",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.35",
     "@types/pg": "^7.14.11",
