--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "news_app",
+  "name": "webshop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,25 +13,21 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
-    "chai": "^4.3.4",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "material-ui-popup-state": "^1.8.2",
     "mqtt": "^4.2.6",
     "next": "^10.1.3",
-    "next-iron-session": "^4.1.12",
     "node-postgres": "^0.6.2",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
-    "react": "16.13.1",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.0.0",
     "react-cookie-consent": "^6.2.3",
-    "react-dom": "16.13.1",
+    "react-dom": "^16.13.1",
     "react-slider": "^1.1.4",
-    "react-xterm": "^2.0.4",
     "sass": "^1.32.8",
-    "styled-components": "^5.2.3",
-    "xterm": "^4.11.0"
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -44,6 +40,15 @@
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.2",
     "@types/react-slider": "^1.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "webpack-bundle-analyzer": "^4.4.1"
+  },
+  "browser": {
+    "jsonwebtoken": false,
+    "bcryptjs": false,
+    "mqtt": false,
+    "node-postgres": false,
+    "pg": false,
+    "sass": false
   }
 }
