--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@react-form-fields/material-ui": "^3.0.0-alpha.11",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
+    "formidable": "^1.2.2",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "material-ui-popup-state": "^1.8.2",
     "mqtt": "^4.2.6",
+    "multiparty": "^4.2.2",
     "next": "^10.1.3",
     "node-postgres": "^0.6.2",
     "nodemon": "^2.0.7",
@@ -25,6 +28,7 @@
     "react-bootstrap": "^1.0.0",
     "react-cookie-consent": "^6.2.3",
     "react-dom": "^16.13.1",
+    "react-material-ui-form": "^1.1.7",
     "react-slider": "^1.1.4",
     "sass": "^1.32.8",
     "styled-components": "^5.2.3"
@@ -32,7 +36,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/bootstrap": "^5.0.9",
+    "@types/formidable": "^1.2.1",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/multiparty": "^0.0.32",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.35",
     "@types/pg": "^7.14.11",
