--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@react-form-fields/material-ui": "^3.0.0-alpha.11",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
+    "date-input-polyfill-react": "^2.14.4",
     "formidable": "^1.2.2",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
