--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "start": "NODE_ENV=production node src/server.js"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.10.8",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
-    "@react-form-fields/material-ui": "^3.0.0-alpha.11",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
-    "date-input-polyfill-react": "^2.14.4",
+    "date-fns": "^2.21.1",
     "formidable": "^1.2.2",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "material-ui-popup-state": "^1.8.2",
     "mqtt": "^4.2.6",
-    "multiparty": "^4.2.2",
     "next": "^10.1.3",
     "node-postgres": "^0.6.2",
     "nodemon": "^2.0.7",
@@ -30,7 +29,6 @@
     "react-bootstrap": "^1.0.0",
     "react-cookie-consent": "^6.2.3",
     "react-dom": "^16.13.1",
-    "react-material-ui-form": "^1.1.7",
     "react-slider": "^1.1.4",
     "sass": "^1.32.8",
     "styled-components": "^5.2.3"
@@ -48,6 +46,7 @@
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.2",
     "@types/react-slider": "^1.1.1",
+    "esbuild-loader": "^2.12.0",
     "typescript": "^4.2.3",
     "webpack-bundle-analyzer": "^4.4.1"
   },
@@ -57,6 +56,7 @@
     "mqtt": false,
     "node-postgres": false,
     "pg": false,
-    "sass": false
+    "sass": false,
+    "formidable": false
   }
 }
