--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "material-ui-popup-state": "^1.8.2",
+    "moment": "^2.29.1",
     "mqtt": "^4.2.6",
     "next": "^10.1.3",
     "node-postgres": "^0.6.2",
@@ -30,6 +31,7 @@
     "react-cookie-consent": "^6.2.3",
     "react-dom": "^16.13.1",
     "react-slider": "^1.1.4",
+    "react-tabulator": "^0.15.0",
     "sass": "^1.32.8",
     "styled-components": "^5.2.3"
   },
