--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "start": "Set NODE_ENV=production&node src/server.js"
   },
   "dependencies": {
-    "@date-io/date-fns": "^2.10.8",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/pickers": "^3.3.10",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "date-fns": "^2.21.1",
@@ -20,7 +18,6 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "material-ui-popup-state": "^1.8.2",
-    "moment": "^2.29.1",
     "mqtt": "^4.2.6",
     "next": "^10.1.3",
     "node-postgres": "^0.6.2",
@@ -33,7 +30,10 @@
     "react-slider": "^1.1.4",
     "react-tabulator": "^0.15.0",
     "sass": "^1.32.8",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "@date-io/date-fns": "1.3.13",
+    "@material-ui/pickers": "3.2.10",
+    "moment": "2.24.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
