--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^1.0.0",
     "react-cookie-consent": "^6.2.3",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-modal-image": "^2.5.0",
     "react-slider": "^1.1.4",
     "react-tabulator": "^0.15.0",
