--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "build": "next build",
-    "start": "Set NODE_ENV=production&node src/server.js"
+    "startW": "Set NODE_ENV=production&node src/server.js",
+    "startL": "NODE_ENV=production node src/server.js"
   },
   "dependencies": {
     "@date-io/date-fns": "1.3.13",
